<resources>
    <string name="app_name">Mansa Musa</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="to_eat">To Eat</string>
    <string name="to_cook">To Cook</string>
    <string name="deliveryman">Mansa Musa Driver?</string>
    <string name="deliveryman_company">Company Driver?</string>
    <string name="suppliers">Suppliers</string>
    <string name="buyer">Buyer</string>
    <string name="supplychain">Supply Chain</string>
    <string name="business_development">Business Development</string>
    <string name="api_key">AIzaSyApGbZ8BiqkxzSAvHwEEFpnPD721preR5s</string>
    <string name="api_key22">AIzaSyBozWvk_dFMd7fYfkF9ShfTjM9iApq9vic</string>
    <string name="api_keyaa">AIzaSyDbeg8Dh2fnyHpmMcuL2PtUPN9kqvQFDdY</string>
    <string name="hint_login">Username/Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="first_time_login">First time here?</string>
    <string name="signup">Sign Up</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="hint_no">Mobile Number</string>
    <string name="code">+971</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_dob">Select your date of birth</string>
    <string name="re_pass">Re-enter password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="select_location">Your location</string>
    <string name="already_account">Already have a account?</string>
    <string name="title_activity_main__nav_drawer">MainActivity_NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="re_send">RE-SEND OTP</string>
    <string name="buildingno">Building Name and No.</string>
    <string name="floor_no">Floor No.</string>
    <string name="flat">Flat No.</string>
    <string name="landmark">Landmark(Anything near by you)</string>
    <string name="home">Home</string>
    <string name="mymenu">My Products</string>
    <string name="kitchen">My Kitchen</string>
    <string name="addmenu">Add Menu</string>
    <string name="schedule">My Schdeule</string>
    <string name="plan">My Plan</string>
    <string name="salesreport">My Sales Report</string>
    <string name="invite">Invite Your Customers</string>
    <string name="edit_profile">Update Profile</string>
    <string name="profile">My Profile</string>
    <string name="ascustomer">Switch To Eat</string>
    <string name="assupplier">Switch As Chef</string>
    <string name="trackorder">Track Order</string>
    <string name="mycart">My Cart</string>
    <string name="myfavo">My Favourite</string>
    <string name="myhistory">My History</string>
    <string name="paymentoption">Payment Options</string>
    <string name="mywallet">My Balance</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback">Feedback By</string>
    <string name="comments">Comments</string>
    <string name="individual_rating">All Ratings</string>
    <string name="notification">Notifications</string>
    <string name="pre_order">Pre-Order</string>
    <string name="reviews">Reviews</string>
    <string name="rated">rated you on</string>
    <string name="addcomment">add a feedback on</string>
    <string name="collection_date">Collection Date  </string>
    <string name="collection_time">Collection Time  </string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="processing">Processing</string>
    <string name="rejected">Rejected</string>
    <string name="returned">Return</string>
    <string name="cancelled">Cancelled</string>
    <string name="out_of_delivery">Out for Delivery</string>
    <string name="accept_order">Accept Order</string>
    <string name="pendingorder">Pending Orders</string>
    <string name="itemavailable">Available\nItems</string>
    <string name="userviews">Users\nViews</string>
    <string name="deliveredorder">Delivered\nOrders</string>
    <string name="makeavailable">Available for the customers</string>
    <string name="online">Online</string>
    <string name="views">Views</string>
    <string name="city">City</string>
    <string name="changepassword">Change Password</string>
    <string name="about">About</string>
    <string name="dob">Date of birth</string>
    <string name="loc">Location</string>
    <string name="contact">Contact Number</string>
    <string name="nationality">Nationality</string>
    <string name="clickhere">Click here for more details</string>
    <string name="update">Update</string>
    <string name="invite_content">Invite your friends to install Mansa Musa to get interesting offers</string>
    <string name="invite_content2">More they join more you will earn</string>
    <string name="sales">Sales</string>
    <string name="thismonth">this month</string>
    <string name="thisyear">this year</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="totaleraning">Total Earning</string>
    <string name="howworks">How it works?</string>
    <string name="addimage">Add original image</string>
    <string name="dishname_arbic">Dish Name in Arabic</string>
    <string name="dishname">Dish Name</string>
    <string name="description_arbic">Description in Arabic</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="item_prepare_time">Time of preparation (in min)</string>
    <string name="cuisines">Cuisines</string>
    <string name="categories">Categories</string>
    <string name="done">Done</string>
    <string name="addcategory">Add Category</string>
    <string name="addcuisine">Add Cuisines</string>
    <string name="my_order">My Order</string>
    <string name="order">Orders</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="completed">Completed</string>
    <string name="Orders_delivered">Orders Delivered</string>
    <string name="orderready">Order is ready</string>
    <string name="payment_type">Payment Type</string>
    <string name="bycustomer">By customers</string>
    <string name="orderdetail">Order Detail</string>
    <string name="delivery">Delivery</string>
    <string name="payment_i">Payment</string>
    <string name="processing_dilaog">Loading.........</string>
    <string name="server_error">Server Error, please try again.</string>
    <string name="mandatory_fiels">All fields are required</string>
    <string name="internetconnection">Please check you internet connection</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="valid_phone">Please enter valid phone number</string>
    <string name="enter_otp_warn">Please enter OTP</string>
    <string name="verification_failed">Verification Failed! Please try again later</string>
    <string name="invalid_code">Invalid code.</string>
    <string name="enter_email">Please enter username/email-id</string>
    <string name="enter_email_id">Please enter email-id</string>
    <string name="valid_email">Please enter vaild email-id</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_repassword">Please re-enter password</string>
    <string name="password_match">Password should be same</string>
    <string name="enter_username">Please enter username</string>
    <string name="enterdob">Please select date of birth</string>
    <string name="enter_loc">Please select your location</string>
    <string name="enter_sub">Please enter subject</string>
    <string name="enter_msg">Please enter message</string>
    <string name="enter_buildingno">Please enter building name and number</string>
    <string name="enter_floorgno">Please enter floor number</string>
    <string name="enter_flatno">Please enter flat number</string>
    <string name="enter_landmark">Please enter landmark</string>
    <string name="enter_product_type">Please select product type</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_title">Please enter title</string>
    <string name="enter_dishname">Please enter dish name</string>
    <string name="enter_dishdescription">Please enter dish description</string>
    <string name="enter_dishprice">Please enter dish price</string>
    <string name="enter_dishtime">Please enter dish time</string>
    <string name="enter_dishimage">Please select dish image</string>
    <string name="enter_dishcuisine">Please enter cuisines type</string>
    <string name="enter_dishcategory">Please enter category type</string>
    <string name="addqty">Add Quantity</string>
    <string name="save">Save</string>
    <string name="delete_item">Delete dish from menu</string>
    <string name="enter_qty">Please add qunatitiy</string>
    <string name="phone">Phone Number</string>
    <string name="qty">Qty</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="orderby"><u>Order By</u></string>
    <string name="orderfinish"><u>Order to be finished</u></string>
    <string name="demo_items">1023</string>
    <string name="demo_starttime">9:00am</string>
    <string name="demo_endtime">8:00pm</string>
    <string name="cancel">Cancel</string>
    <string name="demo_date">12</string>
    <string name="demo_month">Jan 2019</string>
    <string name="demo_day">Monday</string>
    <string name="openinghours">Opening Hours</string>
    <string name="availableitem">Available items</string>
    <string name="viewmenu">View Menu</string>
    <string name="mytrips">My Trips</string>
    <string name="your_card">My Cards</string>
    <string name="myrequest">My Request</string>
    <string name="jobhistory">Job History</string>
    <string name="mycustomer">My Customer</string>
    <string name="switchto">Switch To</string>
    <string name="tobuy"><font color="#9D9C9A">To Buy</font></string>
    <string name="tosell">To Sell</string>
    <string name="demo">Demo</string>
    <string name="demovideo">Demo Video Tour</string>
    <string name="guestsupplier">Sell As Guest</string>
    <string name="scancode">Scan QR Code</string>
    <string name="askforhelp">Ask for help</string>
    <string name="ascustomer_i">Buy</string>
    <string name="assupplier_i">Sell</string>
    <string name="assales_i">Sales</string>
    <string name="close">Close</string>
    <string name="change_langauge">Change Language</string>
    <string name="cash_out">Cash Out</string>
    <string name="driver">Driver</string>
    <string name="approval">Pending for Approval</string>
    <string name="cashout_msg">You can get this money in form of cash from exchanges associated with us.</string>
    <string name="approval_msg">This amount is pending for approval from the admin. Once this payment is release then automatically shifted to your cashout balance.</string>
    <string name="payment_alert">Payment Alert</string>
    <string name="payment_option_txt">If you want to deduct money from your \nbusiness developer wallet then select \noption Wallet Pay. Otherwise you can \nselect Card Pay mode</string>
    <string name="wallet_pay">Wallet Pay</string>
    <string name="card_pay">Card Pay</string>
</resources>