<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/job_request"
            android:title="@string/myrequest" />
        <item
            android:id="@+id/nav_jobhistory"
            android:icon="@drawable/history"
            android:title="@string/jobhistory" />

         <item
            android:id="@+id/nav_mycustomer"
            android:icon="@drawable/history"
            android:title="@string/mycustomer" />

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet"
            android:title="@string/mywallet" />

        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/qr_code"
            android:title="@string/scancode" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/edit"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/email"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/switchto"
        android:id="@+id/switchto">
        <menu>
            <item
                android:id="@+id/nav_tosell"
                android:icon="@drawable/sell"
                android:title="@string/tosell" />
            <item
                android:id="@+id/nav_tobuy"
                android:icon="@drawable/cart"
                android:title="@string/tobuy" />

            <item
                android:id="@+id/nav_driver"
                android:icon="@drawable/delivery_bike"
                android:title="@string/driver" />

        </menu>


    </item>

    <item android:title="@string/change_langauge"
        android:id="@+id/change_langauge">
        <menu>
            <item
                android:id="@+id/nav_english"
                android:icon="@drawable/lang"
                android:title="@string/english" />
            <item
                android:id="@+id/nav_arabic"
                android:icon="@drawable/lang"
                android:title="@string/arabic" />
        </menu>


    </item>


    <item
        android:id="@+id/nav_demo"
        android:title="@string/demo">
        <menu>
            <item
                android:id="@+id/nav_demo_video"
                android:icon="@drawable/video"
                android:title="@string/demovideo" />
            <item
                android:id="@+id/nav_guest_supplier"
                android:icon="@drawable/username"
                android:title="@string/guestsupplier" />
        </menu>


    </item>



</menu>
