<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_15">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cash_out"
        android:textColor="@color/app_color_blue"
        android:textSize="@dimen/label_text_size_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cashout_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/label_text_size_15" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/approval"
        android:textColor="@color/app_color_blue"
        android:textSize="@dimen/label_text_size_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/approval_msg"
        android:textColor="@color/black"
        android:textSize="@dimen/label_text_size_15" />


    <TextView
        android:id="@+id/text_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:gravity="right"
        android:text="@string/close"
        android:textAllCaps="true"
        android:textColor="@color/app_color_orange"
        android:textSize="@dimen/label_text_size_15"
        android:textStyle="bold" />

</LinearLayout>