<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_3"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/demo_date"
            android:textColor="@color/app_color_blue"
            android:textSize="@dimen/label_text_size_13"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/demo_month"
            android:textColor="@color/gray"
            android:textSize="@dimen/label_text_size_13" />

        <TextView
            android:id="@+id/text_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/demo_day"
            android:textColor="@color/app_color_blue"
            android:textSize="@dimen/label_text_size_13"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/openinghours"
                android:textColor="@color/gray"
                android:textSize="@dimen/label_text_size_13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/demo_starttime"
                    android:textColor="@color/app_color_blue"
                    android:textSize="@dimen/label_text_size_13"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginRight="@dimen/margin_5"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="-"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/label_text_size_13"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_endtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:singleLine="true"
                    android:text="@string/demo_endtime"
                    android:textColor="@color/app_color_blue"
                    android:textSize="@dimen/label_text_size_13"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:singleLine="true"
                android:text="@string/availableitem"
                android:textColor="@color/gray"
                android:textSize="@dimen/label_text_size_13" />

            <TextView
                android:id="@+id/text_available_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/demo_items"
                android:textColor="@color/app_color_blue"
                android:textSize="@dimen/label_text_size_13"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/text_view_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:singleLine="true"
                    android:text="@string/viewmenu"
                    android:textColor="@color/app_color_blue"
                    android:textSize="@dimen/label_text_size_13"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>